fixed the button visibility via jquery and updated the less-css accordingly

--- a/personal_ws/main/static/css/main.less
+++ b/personal_ws/main/static/css/main.less
@@ -29,7 +29,7 @@
 .pt-trigger-container { width: 100%; height: 100%; filter: invert(100%); -webkit-filter: invert(100%);
   .arrow-buttons {
     img { width: 150px; height: 100px; box-shadow: none; position: fixed; }
-    .top { top: -20%; right: 45%; }
+    .top { top: -20%; right: 45%; visibility: hidden; }
     .right { transform: rotate(90deg); top: 25%; right: 0;}
     .left { transform: rotate(-90deg); top: 25%; left: 0;}
     .down { transform: rotate(180deg); top: 70%; left: 45%; }
